syntax = "proto3";

// Author: kry127

package yandexcloud.datatransfer.dtextension.v0_2.sink;

import "api/v0_2/common.proto";
import "api/v0_2/data.proto";

// Control item requests for snapshot process
message WriteControlItemReq {
    oneof control_item_req {
        InitReq init_req = 1;
        WriteItemReq item_req = 2;
        WriteBeginSnapshotReq begin_snapshot_req = 3;
        WriteDoneSnapshotReq done_snapshot_req = 4;
    }
}

// Control item response for snapshot process
message WriteControlItemRsp {
    oneof control_item_rsp {
        InitRsp init_rsp = 1;
        WriteItemRsp item_rsp = 2;
        WriteBeginSnapshotRsp begin_snapshot_rsp = 3;
        WriteDoneSnapshotRsp done_snapshot_rsp = 4;
    }
}


// This message writes data change item
message WriteItemReq {
    oneof write_item_req {
        ChangeItem change_item = 1;
        CheckPoint check_point = 2;
    }

    message CheckPoint {}
}
message WriteItemRsp {}

// Indicates the begginning of the snapshot progress for table
// can be used to initiate writing in temporary table, for example
message WriteBeginSnapshotReq {
    Table table = 1;
}
message WriteBeginSnapshotRsp {
    bytes snapshot_state = 2;
}

// Indicates the ending of the snapshot progress for table
// Can be used for publishing temporary table, or committing the transaction to make table visible
message WriteDoneSnapshotReq {
    Table table = 1;
    bytes snapshot_state = 2;
}
message WriteDoneSnapshotRsp {}

