syntax = "proto3";

// Author: kry127

package yandexcloud.datatransfer.dtextension.v0_2.sink;

import "api/v0_2/common.proto";
import "api/v0_2/data.proto";

// Control item requests for snapshot process
message WriteControlItemReq {
    oneof control_item_req {
        WriteInitConnectionReq init_connection_req = 1;
        WriteDataItemReq data_item_req = 2;
        WriteBeginSnapshotReq begin_snapshot_req = 3;
        WriteDoneSnapshotReq done_snapshot_req = 4;
        WriteStartTransactionReq write_start_transaction_req = 5;
        WriteStopTransactionReq write_stop_transaction_req = 6;
    }
}

// Control item response for snapshot process
message WriteControlItemRsp {
    oneof control_item_rsp {
        WriteInitConnectionRsp init_connection_rsp = 1;
        WriteDataItemRsp data_item_rsp = 2;
        WriteBeginSnapshotRsp begin_snapshot_rsp = 3;
        WriteDoneSnapshotRsp done_snapshot_rsp = 4;
        WriteStartTransactionRsp write_start_transaction_rsp = 5;
        WriteStopTransactionRsp write_stop_transaction_rsp = 6;
    }
}

// InitConnectionReq -- is the first connection message that is needed to initiate
// connection with source database with settings used by user
// client_id -- when non empty, used to identify client that may perform multiple operations on service.
// You may ignore this field if you make implementation for single client
message WriteInitConnectionReq {
    string json_settings = 1;
    string client_id = 2;
}
// client_id -- generated client id, if it was empty in `WriteInitConnectionReq`
// You may ignore this field if you make implementation for single client
message WriteInitConnectionRsp {
    Result result = 1;
    string client_id = 2;
}


// This message writes data change item
message WriteDataItemReq {
    ChangeItem change_item = 2;
}
message WriteDataItemRsp {
    Result result = 1;
}

// Indicates the begginning of the snapshot progress for table
// can be used to initiate writing in temporary table, for example
message WriteBeginSnapshotReq {
    Table table = 1;
    CleanupType cleanup_type = 2;

    enum CleanupType {
        CLEANUP_TYPE_UNSPECIFIED = 0;
        NONE = 1;
        DROP = 2;
        TRUNCATE = 3;
    }
}
message WriteBeginSnapshotRsp {
    Result result = 1;
    bytes snapshot_state = 2;
}

// Indicates the ending of the snapshot progress for table
// Can be used for publishing temporary table, or committing the transaction to make table visible
message WriteDoneSnapshotReq {
    Table table = 1;
    bytes snapshot_state = 2;
}
message WriteDoneSnapshotRsp {
    Result result = 1;
}

// This message identifies beginning of the transaction
message WriteStartTransactionReq {
}
message WriteStartTransactionRsp {
}

// This message identifies the end of the transaction
message WriteStopTransactionReq {
}
message WriteStopTransactionRsp {
}
